# energy_hair

./: .gitmodules  LICENSE  README.md
demo/: CMakeLists.txt  main.cpp
src/: camera_cofing.h  camera_control.h  camera_projection.h  demo_utility.h  drawer_camera_config.h  event_handler.h  generate_initial_hair.h  hair.h  hair_elastic.h  hair_filelist_db.h  hair_io_state.h  hair_oldgl.h  hair_root.h  head_collider.h  head_collider_io.h  headmesh.h  headmesh_oldgl.h  object_redo_undo.h  optimize_hair_root.h  optimize_length.h  read_label_image.h  save_scaled_hair_xgen.h  save_scaled_head_hair.h  sketch_oldgl.h  viewer_cameras.h  viewer_cameras2.h
